# spiderweb

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  elephants.py  numero_letras.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
src/spiderweb/: elephants.py  numero_letras.py
